[package]
name = "stigmergy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
one_two_eight = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
