[workspace]
members = [".", "derive"]

[package]
name = "stigmergy"
version = "0.1.0"
edition = "2024"

[dependencies]
arrrg = "0.8.0"
arrrg_derive = "0.8.0"
stigmergy-derive = { path = "derive" }
axum = "0.7"
getopts = "0.2"
one_two_eight = "0.10.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
handled = "0.5.0"
regex = "1.0"

[dev-dependencies]
proptest = "1.0"
axum-test = "15.0"
