[package]
name = "stigmergy-derive"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2024"
description = "Derive macros for stigmergy JsonSchema"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
derive_util = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
serde_json = "1.0"